--- a/page3.html
+++ b/page3.html
@@ -69,19 +69,19 @@
 
             <form action="/signup" method="post">
                 <fieldset>
-                    <legend>User Personal Information</legend>
+                    <legend>User Personal Information</legend><br>
                     <label for="name">Enter your full name</label>
                     <input type="text" name="name" id="name"><br>
-                    <label for="email">Enter your email</label>
+                    <label for="email">Enter your email</label><br>
                     <input type="email" name="email" id="email"><br>
-                    <label for="phone">Enter your phone</label>
+                    <label for="phone">Enter your phone</label><br>
                     <input type="text" name="phone" id="phone"><br>
                     <br>
-                    <label for="gender">Select your gender</label>
+                    <label for="gender">Select your gender</label><br>
                     <input type="radio" name="gender" id="gender" value="male">Male
                     <input type="radio" name="gender" id="gender" value="female">Female
                     <br><br>
-                    <label for="contact">How Should we contact you?</label>
+                    <label for="contact">How Should we contact you?</label><br>
                     <select name="contact" id="contact">
                         <option value="email">Email</option>
                         <option value="phone">Phone</option>
