--- a/index.html
+++ b/index.html
@@ -4,13 +4,51 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <style>
+        header {
+            background: url(images/central_park.jpg) 0 -200px no-repeat;
+            background-size: 1500px;
+            height: 400px;
+            padding-top: 100px;
+            padding-left: 100px;
+            font-weight: bold;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        li {
+            list-style-type: none;
+            display: inline;
+            padding: 0 20px;
+        }
+        li a {
+            text-decoration: none;
+        }
+        li a:link {
+            color: #000;
+        }
+        li a:visited {
+            color: #818db3;
+        }
+        li a:hover {
+            color: #333;
+        }
+        li a:active {
+            color: #753a30;
+        }
+        nav {
+            background-color: rgb(255, 245, 238);
+            height: 50px;
+            text-align: center;
+            padding-top: 2px;
+        }
+
+    </style>
     <title>Document</title>
 </head>
 <body>
     <!--  Container to wrap everything -->
     <div id="container">
         <!-- Brand of website -->
-        <header>My Web Site Brand</header>
+        <header style="font-size: 60px; color: #fff;" >My Web Site Brand</header>
 
         <!-- Main Navigation -->
         <nav>
@@ -27,7 +65,7 @@
         <main>
             <h1>My First Heading</h1>
             <p>My first paragraph</p>
-            <img src="./images/central_park.jpg" alt="Central Parl" width="500">
+            <!-- <img src="./images/central_park.jpg" alt="Central Park" width="500"> -->
         </main>
         <!-- End of Main Content -->
 
