Added table and form css styling

--- a/page2.html
+++ b/page2.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="./index.html">Home</a></li>
                 <li><a href="./page2.html">About</a></li>
-                <li>Gallery</li>
+                <li><a href="/">Gallery</a></li>
                 <li><a href="./page3.html">Contact</a></li>
             </ul>
         </nav>
@@ -28,9 +28,8 @@
         <main>
             <h1>My Second Heading</h1>
             <p>My second paragraph</p>
-            <img src="./images/central_park.jpg" alt="Central Parl" width="500">
 
-            <table border="1">
+            <table>
                 <caption>Calories Comparison of Popular Burgers</caption>
                 <thead>
                     <tr>
